[package]
name = "incight"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
colour = "2.1.0"
demand = "1.8.0"
phf = { version = "0.13.1", features = ["macros"] }
strum = { version = "0.27.2", features = ["derive"] }

[profile.release]
opt-level = 2
lto = "thin"
panic = "abort"
strip = true

[profile.ci]
inherits = "release"
codegen-units = 1
lto = true
opt-level = "s"
